--- a/package.json
+++ b/package.json
@@ -41,13 +41,12 @@
     "react-native-vector-icons": "^10.2.0",
     "solc": "^0.8.20",
     "uuid": "^11.1.0",
-    "web3": "^1.5.2"
+    "web3": "^1.5.2",
+    "expo-updates": "~0.27.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^11.5.0",
-    "jest": "^29.7.0"
+    "@babel/core": "^7.20.0"
+
   },
   "private": true
 }
